[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/gameplay-camera/gameplay_camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://map/multi-player/ui/ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/terrain/terrain.tscn" type="PackedScene" id=3]
[ext_resource path="res://map/multi-player/client/battle.gd" type="Script" id=4]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 3
background_sky = SubResource( 1 )
background_color = Color( 0.254902, 0.823529, 1, 1 )

[node name="battle" type="Node"]
script = ExtResource( 4 )

[node name="castle_holder" type="Node" parent="."]

[node name="farm_holder" type="Node" parent="."]

[node name="unit_holder" type="Node" parent="."]

[node name="terrain" parent="." instance=ExtResource( 3 )]

[node name="cameraPivot" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.707106, 0.707106, 0, -0.707106, 0.707106, 0, 0, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 40, 70 )
light_energy = 0.4

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="ui" parent="." instance=ExtResource( 2 )]

[connection signal="on_deploy_card" from="ui" to="." method="_on_ui_on_deploy_card"]
